<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_item_info"
            android:textSize="20dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_item_name"
            android:id="@+id/app_item_name"
            android:textSize="20dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_item_packagename"
            android:id="@+id/app_item_packagename"
            android:textSize="20dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_btn"
                android:text="@string/start_btn"
                android:textSize="20dp"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_btn"
                android:text="@string/cancel_btn"
                android:textSize="20dp"/>

    </LinearLayout>
</LinearLayout>